force-app/main/default/objects/cgcloud__Product_Hierarchy__c/cgcloud__Product_Hierarchy__c.object-meta.xml
<CustomObject>
    <description>Relation from a product (Child_Product) to its parent. This relation is time framed.</description>
    <label>Product Hierarchy</label>
    <nameField>
        <displayFormat>PHR-{00000000}</displayFormat>
        <label>Product Hierarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>