force-app/main/default/objects/cgcloud__Product_Hierarchy__c/fields/cgcloud__Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the parent product.</description>
    <label>Parent Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>$User.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Child Products</relationshipLabel>
    <relationshipName>Product_Parent</relationshipName>
    <type>Lookup</type>
</CustomField>