force-app/main/default/objects/cgcloud__Product_Hierarchy__c/fields/cgcloud__Parent_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parent_Product_Code__c</fullName>
    <description>Unique identifier of parent product.</description>
    <formula>cgcloud__Parent_Product__r.cgcloud__Consumer_Goods_Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Product Code</label>
    <type>Text</type>
</CustomField>