force-app/main/default/objects/cgcloud__Product_Hierarchy__c/fields/cgcloud__Parent_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parent_Product_Description__c</fullName>
    <description>Short description of the parent product.</description>
    <formula>cgcloud__Parent_Product__r.cgcloud__Short_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Product Description</label>
    <type>Text</type>
</CustomField>