force-app/main/default/objects/cgcloud__Product_Hierarchy__c/fields/cgcloud__Structure_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Structure_Type__c</fullName>
    <description>Specifies the structure type of the hierarchy.</description>
    <label>Structure Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
                <default>true</default>
                <label>Sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>