force-app/main/default/objects/cgcloud__Product_Hierarchy__c/validationRules/cgcloud__Child_unequal_parent.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Child_unequal_parent</fullName>
    <active>true</active>
    <description>The Child Product and the Parent Product can&apos;t be the same.</description>
    <errorConditionFormula>cgcloud__Child_Product__c == cgcloud__Parent_Product__c</errorConditionFormula>
    <errorMessage>The Child Product and the Parent Product can&apos;t be the same.</errorMessage>
</ValidationRule>