force-app/main/default/objects/cgcloud__Product_Hierarchy__c/validationRules/cgcloud__Mandatory_StructureType_is_set.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Mandatory_StructureType_is_set</fullName>
    <active>true</active>
    <description>The Structure Type can&apos;t be empty.</description>
    <errorConditionFormula>ISPICKVAL( cgcloud__Structure_Type__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>cgcloud__Structure_Type__c</errorDisplayField>
    <errorMessage>The Structure Type can&apos;t be empty.</errorMessage>
</ValidationRule>