force-app/main/default/objects/cgcloud__Product_Hierarchy__c/validationRules/cgcloud__Parent_Product_Not_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Parent_Product_Not_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>OR (ISBLANK(cgcloud__Parent_Product__c), ISNULL(cgcloud__Parent_Product__c))</errorConditionFormula>
    <errorDisplayField>cgcloud__Parent_Product__c</errorDisplayField>
    <errorMessage>The Parent Product can&apos;t be empty.</errorMessage>
</ValidationRule>