force-app/main/default/objects/cgcloud__Product_Hierarchy__c/validationRules/cgcloud__Product_Hierarchy_Sales_Org_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Product_Hierarchy_Sales_Org_Mismatch</fullName>
    <active>true</active>
    <description>The Child Product and the Parent Product must have the same Sales Org.</description>
    <errorConditionFormula>cgcloud__Child_Product__r.cgcloud__Sales_Org__c != cgcloud__Parent_Product__r.cgcloud__Sales_Org__c</errorConditionFormula>
    <errorMessage>The Child Product and the Parent Product must have the same Sales Org.</errorMessage>
</ValidationRule>