force-app/main/default/objects/cgcloud__Product_Hierarchy__c/validationRules/cgcloud__Valid_From_and_Valid_Thru.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Valid_From_and_Valid_Thru</fullName>
    <active>true</active>
    <description>Valid From can&apos;t be later than Valid Thru.</description>
    <errorConditionFormula>cgcloud__Valid_From__c  &gt; cgcloud__Valid_Thru__c</errorConditionFormula>
    <errorDisplayField>cgcloud__Valid_Thru__c</errorDisplayField>
    <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
</ValidationRule>